--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.64.0",
     "react-native-bootsplash": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
